--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,6 +21,10 @@ jobs:
       with:
         java-version: '18'
         distribution: 'temurin'
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x ./gradlew
+
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
     
