--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,34 +1,39 @@
-name: Build all projects
+name: Build selected project
 
 on:
-    workflow_dispatch:
+  workflow_dispatch:
+    inputs:
+      project:
+        description: 'Project name'
+        type: choice
+        options:
+          - TDAVector
+        required: true
 
 permissions:
   contents: read
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 18
-      uses: actions/setup-java@v3
-      with:
-        java-version: '18'
-        distribution: 'temurin'
+      - uses: actions/checkout@v3
+      - name: Set up JDK 18
+        uses: actions/setup-java@v3
+        with:
+          java-version: '18'
+          distribution: 'temurin'
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x ./gradlew
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
 
-    - name: Setup Gradle
-      uses: gradle/gradle-build-action@v2
-    
-    - name: Execute Gradle build
-      run: ./gradlew build
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
 
-    - uses: actions/upload-artifact@v3
-      with:
-        name: artifacts
-        path: build/libs/
+      - name: Execute Gradle build
+        run: ./gradlew :${{ github.event.inputs.project }}:build
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: ${{ github.event.inputs.project }}
+          path: build/libs/
