--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,7 +31,7 @@ jobs:
         uses: gradle/gradle-build-action@v2
 
       - name: Execute Gradle build
-        run: ./gradlew :${{ github.event.inputs.project }}:build
+        run: ./gradlew :${{ github.event.inputs.project }}:build --scan
 
       - uses: actions/upload-artifact@v3
         with:
